fixes for adaptive

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
 	<nav>
 		<div class="menu">
 			<div class="menu-btn animated-logo" data-link=".header"></div>
-			<div class="menu-btn courses-prices" data-link=".courses">
-				<div class="circle"></div>
-				<div class="txt">Курсы</div>
-			</div>
 			<div class="menu-btn about-us" data-link=".main-text">
 				<div class="circle"></div>
 				<div class="txt">О нас</div>
+			</div>
+			<div class="menu-btn courses-prices" data-link=".courses">
+				<div class="circle"></div>
+				<div class="txt">Курсы</div>
 			</div>
 			<div class="menu-btn super-teachers" data-link=".teachers">
 				<div class="circle"></div>
@@ -58,8 +58,10 @@
 			</div>
 			<div class="menu-bt call-us">
 				<a href="tel:+375296633164">
-					<div class="circle-mob"></div>
-					<span class="to-call-mob">Позвонить</span>
+					<div class="call-wrapper">
+						<div class="circle-mob"></div>
+						<span class="to-call-mob">ЗВОНИТЕ!</span>
+					</div>	
 				</a>
 				<div class="txt"> <a href="tel:+375296633164">+37529 6633164</a><br>Звоните!</div>
 			</div>
@@ -67,14 +69,92 @@
 	</nav>
 
 
+<section class="main-text">
+	 	<div class="container main-text-content">
+
+			<h1 property="name">Студия "Акварель" - самые уютные курсы рисования в Минске.</h1>
+
+			<div class="main-block-1">
+				<p property="description" >Что такое <strong>"Хорошие курсы по рисунку"?</strong> Главное здесь - это соответствующая атмосфера, системность знаний, регулярный творческий процесс, толковый наставник, и, как результат, постоянно растущий художественный уровень учащегося.</p>
+				<p>В пяти минутах хотьбы от станции метро спортивная, в окруженнии шикарной зелени, укрывающей от городского шума и суеты, по адресу Матусевича 23, расположилась наша художественная школа.</p>
+				<p>Здесь Вы сможете не только разово написать желаемую картину, но и пройти полный курс обучения по таким классическим дисциплинам, как академический рисунок, живопись, скульптура, что станет прочным фундаментом для дальнейшего раскрытия Вашего творческого потенциала.</p>
+				<p>Для абитуриентов у нас предусмотрены специальные программы подготовки к поступлению в ССУЗы и ВУЗы. Также мы регулярно проводим различные мастер-классы и выезжаем дружным и веселым коллективом на пленеры.</p>
+				<p>Традиционно, мы предлагаем посетить первый урок рисования бесплатно. Звоните, приходите, Вам понравится!</p>
+			</div>
+
+			<div class="main-img-1">
+				<img src="images/main-parking.jpg" alt="Курсы рисования в Минске, студия Акварель" property="image">
+			</div>
+
+			<div class="main-img-2">
+				<img src="images/main-birds.jpg" alt="Птичкина студии Акварель">
+			</div>
+			
+			<div class="main-block-2">
+				<h3>Курсы академического рисунка в Минске.</h2>
+				<p> Классический академический рисунок - это не только базовый навык любого художника и иллюстратора, но и дисциплина по которой нужно сдавать экзамен для поступления в художественное учебное заведение. Наши опытные преподаватели помогут не только подготовится к вступительным экзаменам, но и откроют тайны света и тени, формы и перспективы в самой понятной илегкоусвояемой форме. Академический рисунок в Минске - доступен и прекрасен, если это школа рисунка "Акварель"</p>
+
+				<h3>Курсы живописи.</h2>
+				<p>Если вы хотите постичь тайны живописи, научиться работать с цветом, видеть как художник, то курсы живописи в Минске на базе художественной школы "Акварель" - лучший выбор, приходите и убедитесь сами. Первое занятие бесплатно. </p>
+				<p>Внимание! Живопись вызывает зависимость, кисти, краски и запах скипидара - романтика для сильных духом).</p>
+
+				<h3>Курсы скульптуры.</h2>
+				<p>Классическая программа скульптуры теперь доступна всем не только в рамках специальных учебных заведений, но и у нас, в студии "Акварель". Обязательно для всех резчиков, 3d-модельеров, ювелиров и просто неравнодущных к этому прекраснейшему виду искусств.</p>
+			</div>
+
+			<div class="main-img-3">
+				<img src="images/main-room.jpg" alt="На студии Акварель идут занятия - готовим поступать" property="image">
+			</div>
+			<div class="main-img-4">
+				<img src="images/main-exit.jpg" alt="Зелень вокруг - студия Акварель">
+			</div>
+			<div class="main-img-5">
+				<img src="images/main-lib.jpg" alt="книжная полка на студии Акварель">
+			</div>
+
+
+			<div class="main-block-3">
+				<h3>Курсы рисования в Минске для начинающих.</h2>
+				<p>Вы хотите научиться рисовать, но не знаете с чего начать? Или, может быть, не знаете, что для этого надо? Или другой вопрос из сотни возможных вопросов? Не беда! Даже самый известный и профессиональный художник когда-то стоял в самом начале пути, все когда-то с чего-то начинали. </p>
+				<p>Курсы рисования для начинающих в минской художественной школе "Акварель" - лучшее место в городе, для того чтобы попробовать себя в рисунке (бесплатно), выбрать направление и начать. Ведь для того, чтобы научиться рисовать - нужно рисовать!)</p>
+
+				<h3>Курсы рисования в Минске для взрослых.</h2>
+				<p>Если Вы с ностальгией вспоминаете уроки ИЗО в школе, если время от времени вас одолевают приступы желания изобразить что-нибудь, но тут Вы вспоминаете, что не успели в свое время научиться рисовать как могли бы, то у нас для Вас есть прекрасная новости - рисунку все возрасты покорны, рисовать никогда не поздно! Подтверждение этого - успехи наших учеников на курсах рисования для взрослых у нас в студии "Акварель". Кто-то рисует, чтобы отвлечься от повседневности, кто-то находит радость в прогрессе и готовых работах, но главное, что всех объеденяет - это удовольствие от творческой самореализации в уютной атмосфере школы рисования "Акварель".</p>
+			</div>
+
+			<div class="main-img-6">
+				<img src="images/main-lady.jpg" alt="ученик-живописец и её работа">
+			</div>
+
+
+			<div class="main-block-4">
+				<h3>Наши перимущества:</h3>
+				<ul>
+					<li>Очень уютная творческая обстановка, чему способствует уединенное расположение и интерьер.</li>
+					<li>Удобно добираться (5 мин) от станции метро "Спортивная".</li>
+					<li>Доступность. Стоимость занятий - 5 рублей за академический час.</li>
+					<li>Индивидуальный подход (Начать можно в любое время, без оглядки на остальных).</li>
+					<li>Мы распологаем шикарной подборкой учебной литературы.</li>
+					<li>Чай, кофе, печеньки.</li>
+					<li>Регулярные матер-классы и выезды на пленеры.</li>
+					<li>Всегда свободные места на парковке под окнами студии.</li>
+				</ul>
+			</div>
+
+
+		</div>
+		<canvas id="canvas-basic"></canvas>
+	</section>
+
+
 
 	 <section class="courses" property="mainEntityOfPage">
 	 	<div class="container">
 	 		<h1>Курсы рисования в Минске с ценами. Взрослые и подростковые группы, любой уровень подготовки.</h1>
-
-			<a class="pdf-link" href="Курсы рисования в Минске - студия Акварель.pdf">Курсы рисования в Минске - скачать pdf- файл.</a>
-	 		
-	
+			<div class="pdf">
+				<a class="pdf-link" href="Курсы рисования в Минске - студия Акварель.pdf">Курсы рисования в Минске - скачать pdf- файл.</a>
+			</div>
+			
 			<div class="courses-list" property="makesOffer">
 
 				<div class="course-card course-1">
@@ -332,83 +412,7 @@
 
 
 
-	<section class="main-text">
-	 	<div class="container main-text-content">
-
-			<h1 property="name">Студия "Акварель" - самые уютные курсы рисования в Минске.</h1>
-
-			<div class="main-block-1">
-				<p property="description" >Что такое <strong>"Хорошие курсы по рисунку"?</strong> Главное здесь - это соответствующая атмосфера, системность знаний, регулярный творческий процесс, толковый наставник, и, как результат, постоянно растущий художественный уровень учащегося.</p>
-				<p>В пяти минутах хотьбы от станции метро спортивная, в окруженнии шикарной зелени, укрывающей от городского шума и суеты, по адресу Матусевича 23, расположилась наша художественная школа.</p>
-				<p>Здесь Вы сможете не только разово написать желаемую картину, но и пройти полный курс обучения по таким классическим дисциплинам, как академический рисунок, живопись, скульптура, что станет прочным фундаментом для дальнейшего раскрытия Вашего творческого потенциала.</p>
-				<p>Для абитуриентов у нас предусмотрены специальные программы подготовки к поступлению в ССУЗы и ВУЗы. Также мы регулярно проводим различные мастер-классы и выезжаем дружным и веселым коллективом на пленеры.</p>
-				<p>Традиционно, мы предлагаем посетить первый урок рисования бесплатно. Звоните, приходите, Вам понравится!</p>
-			</div>
-
-			<div class="main-img-1">
-				<img src="images/main-parking.jpg" alt="Курсы рисования в Минске, студия Акварель" property="image">
-			</div>
-
-			<div class="main-img-2">
-				<img src="images/main-birds.jpg" alt="Птичкина студии Акварель">
-			</div>
-			
-			<div class="main-block-2">
-				<h3>Курсы академического рисунка в Минске.</h2>
-				<p> Классический академический рисунок - это не только базовый навык любого художника и иллюстратора, но и дисциплина по которой нужно сдавать экзамен для поступления в художественное учебное заведение. Наши опытные преподаватели помогут не только подготовится к вступительным экзаменам, но и откроют тайны света и тени, формы и перспективы в самой понятной илегкоусвояемой форме. Академический рисунок в Минске - доступен и прекрасен, если это школа рисунка "Акварель"</p>
-
-				<h3>Курсы живописи.</h2>
-				<p>Если вы хотите постичь тайны живописи, научиться работать с цветом, видеть как художник, то курсы живописи в Минске на базе художественной школы "Акварель" - лучший выбор, приходите и убедитесь сами. Первое занятие бесплатно. </p>
-				<p>Внимание! Живопись вызывает зависимость, кисти, краски и запах скипидара - романтика для сильных духом).</p>
-
-				<h3>Курсы скульптуры.</h2>
-				<p>Классическая программа скульптуры теперь доступна всем не только в рамках специальных учебных заведений, но и у нас, в студии "Акварель". Обязательно для всех резчиков, 3d-модельеров, ювелиров и просто неравнодущных к этому прекраснейшему виду искусств.</p>
-			</div>
-
-			<div class="main-img-3">
-				<img src="images/main-room.jpg" alt="На студии Акварель идут занятия - готовим поступать" property="image">
-			</div>
-			<div class="main-img-4">
-				<img src="images/main-exit.jpg" alt="Зелень вокруг - студия Акварель">
-			</div>
-			<div class="main-img-5">
-				<img src="images/main-lib.jpg" alt="книжная полка на студии Акварель">
-			</div>
-
-
-			<div class="main-block-3">
-				<h3>Курсы рисования в Минске для начинающих.</h2>
-				<p>Вы хотите научиться рисовать, но не знаете с чего начать? Или, может быть, не знаете, что для этого надо? Или другой вопрос из сотни возможных вопросов? Не беда! Даже самый известный и профессиональный художник когда-то стоял в самом начале пути, все когда-то с чего-то начинали. </p>
-				<p>Курсы рисования для начинающих в минской художественной школе "Акварель" - лучшее место в городе, для того чтобы попробовать себя в рисунке (бесплатно), выбрать направление и начать. Ведь для того, чтобы научиться рисовать - нужно рисовать!)</p>
-
-				<h3>Курсы рисования в Минске для взрослых.</h2>
-				<p>Если Вы с ностальгией вспоминаете уроки ИЗО в школе, если время от времени вас одолевают приступы желания изобразить что-нибудь, но тут Вы вспоминаете, что не успели в свое время научиться рисовать как могли бы, то у нас для Вас есть прекрасная новости - рисунку все возрасты покорны, рисовать никогда не поздно! Подтверждение этого - успехи наших учеников на курсах рисования для взрослых у нас в студии "Акварель". Кто-то рисует, чтобы отвлечься от повседневности, кто-то находит радость в прогрессе и готовых работах, но главное, что всех объеденяет - это удовольствие от творческой самореализации в уютной атмосфере школы рисования "Акварель".</p>
-			</div>
-
-			<div class="main-img-6">
-				<img src="images/main-lady.jpg" alt="ученик-живописец и её работа">
-			</div>
-
-
-			<div class="main-block-4">
-				<h3>Наши перимущества:</h3>
-				<ul>
-					<li>Очень уютная творческая обстановка, чему способствует уединенное расположение и интерьер.</li>
-					<li>Удобно добираться (5 мин) от станции метро "Спортивная".</li>
-					<li>Доступность. Стоимость занятий - 5 рублей за академический час.</li>
-					<li>Индивидуальный подход (Начать можно в любое время, без оглядки на остальных).</li>
-					<li>Мы распологаем шикарной подборкой учебной литературы.</li>
-					<li>Чай, кофе, печеньки.</li>
-					<li>Регулярные матер-классы и выезды на пленеры.</li>
-					<li>Всегда свободные места на парковке под окнами студии.</li>
-				</ul>
-			</div>
-
-
-		</div>
-		<canvas id="canvas-basic"></canvas>
-	</section>
-
+	
 
 	<section class="teachers" property="employee">
 		<div class="balls-wrapper">	
@@ -555,7 +559,7 @@
 	</div>
 
 	<div class="free-lesson link-to-contacts string-above-head">
-		<div class="container">
+		<div class="container running-string">
 			<p>Приходите на бесплатное пробное занятие!</p>
 		</div>
 	</div>
