new backrounds at new sections

--- a/index.html
+++ b/index.html
@@ -157,6 +157,29 @@
 			
 			<div class="courses-list" property="makesOffer">
 
+				<div class="course-card course-0">
+					<div class="course-image">
+						<img src="images/academ-risunok.jpg" alt="Картина маслом под руководством преподавателя по живописи">
+					</div>
+					<div class="course-description">
+						<h2 class="course-header" property="name">
+							Картина маслом под руководством преподавателя.
+						</h2>
+						<div class="course-about" property="description">
+							<p>Выдается холст 40х50 и все необходимое. Рисующий выбирает понравившийся сюжет и выполняет его под руководством преподавателя.</p>
+							<p>3-9 часов - и довольный человек с шедевром в руках).</p>
+						</div>
+					</div>
+<!-- 					<a href="drawing-course-for-enrollee-minsk.html">
+						<div class="to-see-the-programm">
+							<p>Программа курса</p>
+						</div>
+					</a> -->
+					<div class="course-price">
+							<p>цена 120 руб/картину</p>
+					</div>
+				</div>
+
 				<div class="course-card course-1">
 					<div class="course-image">
 						<img src="images/academ-risunok.jpg" alt="Курсы по академическому рисунку в Минске, подготовка к поступлению">
