Actual text + 2 products

--- a/composition-course-minsk.html
+++ b/composition-course-minsk.html
@@ -5,7 +5,7 @@
 	<title>Курс "Композиция".</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#a1fcff">
+    <meta name="theme-color" content="#E7D0BC">
     <meta name="yandex-verification" content="72eb25d31231b08c" />
     <meta name="google-site-verification" content="BQUnE9QC0RiMLb3R88hBEGOxYAcoRHbkwguHm44C7OA" />
     <meta name="description" content="Программа обучения по курсу 'Композиция'" />        
