--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Cтудия Акварель - самая уютная школа рисования в Минске.</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#a1fcff">
+    <meta name="theme-color" content="#E7D0BC">
     <meta name="yandex-verification" content="72eb25d31231b08c" />
     <meta name="google-site-verification" content="BQUnE9QC0RiMLb3R88hBEGOxYAcoRHbkwguHm44C7OA" />
     <meta name="description" content="Ищете хорошие курсы рисования в Минске?- Звоните +37529 6633164. Подготовка к поступлению, курсы рисования для начинающих, курсы рисунка для взрослых, творческая атмосфера, хорошие цены." />        
@@ -79,7 +79,7 @@
 				<p>В пяти минутах хотьбы от станции метро спортивная, в окруженнии шикарной зелени, укрывающей от городского шума и суеты, по адресу Матусевича 23, расположилась наша художественная школа.</p>
 				<p>Здесь Вы сможете не только разово написать желаемую картину, но и пройти полный курс обучения по таким классическим дисциплинам, как академический рисунок, живопись, скульптура, что станет прочным фундаментом для дальнейшего раскрытия Вашего творческого потенциала.</p>
 				<p>Для абитуриентов у нас предусмотрены специальные программы подготовки к поступлению в ССУЗы и ВУЗы. Также мы регулярно проводим различные мастер-классы и выезжаем дружным и веселым коллективом на пленеры.</p>
-				<p>Традиционно, мы предлагаем посетить первый урок рисования бесплатно. Звоните, приходите, Вам понравится!</p>
+				<p>Звоните, приходите, Вам понравится!</p>
 			</div>
 
 			<div class="main-img-1">
@@ -95,7 +95,7 @@
 				<p> Классический академический рисунок - это не только базовый навык любого художника и иллюстратора, но и дисциплина по которой нужно сдавать экзамен для поступления в художественное учебное заведение. Наши опытные преподаватели помогут не только подготовится к вступительным экзаменам, но и откроют тайны света и тени, формы и перспективы в самой понятной илегкоусвояемой форме. Академический рисунок в Минске - доступен и прекрасен, если это школа рисунка "Акварель"</p>
 
 				<h3>Курсы живописи.</h2>
-				<p>Если вы хотите постичь тайны живописи, научиться работать с цветом, видеть как художник, то курсы живописи в Минске на базе художественной школы "Акварель" - лучший выбор, приходите и убедитесь сами. Первое занятие бесплатно. </p>
+				<p>Если вы хотите постичь тайны живописи, научиться работать с цветом, видеть как художник, то курсы живописи в Минске на базе художественной школы "Акварель" - лучший выбор, приходите и убедитесь сами.</p>
 				<p>Внимание! Живопись вызывает зависимость, кисти, краски и запах скипидара - романтика для сильных духом).</p>
 
 				<h3>Курсы скульптуры.</h2>
@@ -116,7 +116,7 @@
 			<div class="main-block-3">
 				<h3>Курсы рисования в Минске для начинающих.</h2>
 				<p>Вы хотите научиться рисовать, но не знаете с чего начать? Или, может быть, не знаете, что для этого надо? Или другой вопрос из сотни возможных вопросов? Не беда! Даже самый известный и профессиональный художник когда-то стоял в самом начале пути, все когда-то с чего-то начинали. </p>
-				<p>Курсы рисования для начинающих в минской художественной школе "Акварель" - лучшее место в городе, для того чтобы попробовать себя в рисунке (бесплатно), выбрать направление и начать. Ведь для того, чтобы научиться рисовать - нужно рисовать!)</p>
+				<p>Курсы рисования для начинающих в минской художественной школе "Акварель" - лучшее место в городе, для того чтобы попробовать себя в рисунке, выбрать направление и начать. Ведь для того, чтобы научиться рисовать - нужно рисовать!)</p>
 
 				<h3>Курсы рисования в Минске для взрослых.</h2>
 				<p>Если Вы с ностальгией вспоминаете уроки ИЗО в школе, если время от времени вас одолевают приступы желания изобразить что-нибудь, но тут Вы вспоминаете, что не успели в свое время научиться рисовать как могли бы, то у нас для Вас есть прекрасная новости - рисунку все возрасты покорны, рисовать никогда не поздно! Подтверждение этого - успехи наших учеников на курсах рисования для взрослых у нас в студии "Акварель". Кто-то рисует, чтобы отвлечься от повседневности, кто-то находит радость в прогрессе и готовых работах, но главное, что всех объеденяет - это удовольствие от творческой самореализации в уютной атмосфере школы рисования "Акварель".</p>
@@ -130,6 +130,7 @@
 			<div class="main-block-4">
 				<h3>Наши перимущества:</h3>
 				<ul>
+					<li>МНОГО СВОБОДНОГО ПРОСТРАНСТВА НА ОДНОГО УЧАЩЕГОСЯ.</li>
 					<li>Очень уютная творческая обстановка, чему способствует уединенное расположение и интерьер.</li>
 					<li>Удобно добираться (5 мин) от станции метро "Спортивная".</li>
 					<li>Доступность. Стоимость занятий - 5 рублей за академический час.</li>
@@ -158,8 +159,8 @@
 			<div class="courses-list" property="makesOffer">
 
 				<div class="course-card course-0">
-					<div class="course-image">
-						<img src="images/academ-risunok.jpg" alt="Картина маслом под руководством преподавателя по живописи">
+					<div class="course-image kartina-maslom">
+						<img src="images/kartina-maslom.jpg" alt="Картина маслом под руководством преподавателя по живописи">
 					</div>
 					<div class="course-description">
 						<h2 class="course-header" property="name">
@@ -176,7 +177,7 @@
 						</div>
 					</a> -->
 					<div class="course-price">
-							<p>цена 120 руб/картину</p>
+							<p>цена от 40 до 120 руб. за картину</p>
 					</div>
 				</div>
 
@@ -291,7 +292,7 @@
 						</div>
 					</a>
 					<div class="course-price">
-							<p>цена 150 руб/мес</p>
+							<p>цена 90 руб/мес</p>
 					</div>
 				</div>
 
@@ -313,6 +314,43 @@
 					</div>
 				</div>
 
+
+				<div class="course-card course-11">
+					<div class="course-image">
+						<img src="images/botanic.jpg" alt="Мастер класс по ботаническому барельефу">
+					</div>
+					<div class="course-description">
+						<h2 class="course-header" property="name">
+							Мастер класс по ботаническому барельефу.
+						</h2>
+						<div class="course-about" property="description">
+							<p>Увлекательный мастер-класс в ходе которого вы сможете сделать оттиск-композицию из цветов и растений и отлить в гипсе. В результате получите стильное гипсовое панно, которое украсит Ваш дом.</p>
+						</div>
+					</div>
+					<div class="course-price">
+							<p>1шт - 35р. 2шт - 45р.</p>
+					</div>
+				</div>
+
+				<div class="course-card course-12">
+					<div class="course-image">
+						<img src="images/for-masters.jpg" alt="Курсы повышения квалификации">
+					</div>
+					<div class="course-description">
+						<h2 class="course-header" property="name">
+							Курсы повышения квалификации для Hand-Made мастеров.
+						</h2>
+						<div class="course-about" property="description">
+							<p>Экспресс-курсы по созданию персонажа, разработке и стилизации игрушки (мимика, поза, характер), по пластической анатомии (пластика головы, рук, ног), декоративной росписи кукольного лица.</p>
+							<p>Удобный формат для иногородних.</p>
+						</div>
+					</div>
+					<div class="course-price">
+							<p>цена договорная</p>
+					</div>
+				</div>
+
+
 				<div class="course-card course-7">
 					<div class="course-image">
 						<img src="images/anatomy.jpg" alt="Курсы по пластической анатомии в Минске.">
@@ -332,7 +370,7 @@
 						</div>
 					</a>
 					<div class="course-price">
-							<p>цена 390 руб/курс</p>
+							<p>цена 240 руб/курс</p>
 					</div>
 				</div>
 
@@ -401,7 +439,7 @@
 						</div>
 					</a>
 					<div class="course-price">
-							<p>цена 150 руб/курс</p>
+							<p>цена 120 руб/курс</p>
 					</div>
 				</div>
 
@@ -424,7 +462,7 @@
 						</div>
 					</a>
 					<div class="course-price">
-							<p>цена 150 руб/курс</p>
+							<p>цена 120 руб/курс</p>
 					</div>
 				</div>
 
@@ -556,24 +594,32 @@
 			ИП Домбровская - УНП 193072191
 		</div>
 
+<!-- 		<div class="flowers">
+			<div class="flower f-1"></div>
+			<div class="flower f-2"></div>
+			<div class="flower f-3"></div>
+			<div class="flower f-4"></div>
+			<div class="flower f-5"></div>
+		</div> -->
+
 	</section>
 
 	<div class="transport link-to-contacts string-above-head">
 		<div class="container">
 			<div class="metro">
-				<img src="images/metro.jpg" alt="">
+				<img src="images/metro.png" alt="">
 			</div>
 			<div class="metrostation">
 				<p> СПОРТИВНАЯ (550 м)</p>
 			</div>
 			<div class="bus">
-				<img src="images/bus.jpg" alt="">
+				<img src="images/bus.png" alt="">
 			</div>
 			<div class="busbus">
 				<p> 11, 28, 29, 40, 41, 46, 49, 50,<br> 54, 62Э, 78, 107, 126, 293П </p>
 			</div>
 			<div class="trall">
-				<img src="images/trall.jpg" alt="">
+				<img src="images/trall.png" alt="">
 			</div>
 			<div class="tralleibus">
 				<p> 7, 8, 13, 31, 44, 77 </p>
@@ -583,7 +629,7 @@
 
 	<div class="free-lesson link-to-contacts string-above-head">
 		<div class="container running-string">
-			<p>Приходите на бесплатное пробное занятие!</p>
+			<p>Приходите на пробное занятие!</p>
 		</div>
 	</div>
 
